src/objects/Value_Delivery_Session_Outcomes__c.object
<CustomObject>
    <description>TOOLKIT</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiate And Confirm</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SessionOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Value_Delivery_Session_Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Outcome__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value_Delivery_Session__c</fullName>
        <label>Value Delivery Session</label>
        <referenceTo>Value_Delivery_Session__c</referenceTo>
        <relationshipName>Session_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Value Delivery Session Outcomes</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Outcomes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Delivery Session Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorMessage>Session end date should be greater than start date.</errorMessage>
    </validationRules>
</CustomObject>